--- a/04_11.md
+++ b/04_11.md
@@ -15,6 +15,7 @@ menu:
 
 ---
 
+<a href="https://gitlocalize-staging.herokuapp.com/repo/1897/es?utm_source=badge"> <img src="https://gitlocalize-staging.herokuapp.com/repo/1897/es/badge.svg" /> </a>
 
 # French Toast
 
