--- a/22_10.md
+++ b/22_10.md
@@ -1,6 +1,8 @@
 
 # French Toast
 
+<a href="https://gitlocalize-staging.herokuapp.com/repo/1897/whole_project?utm_source=badge"> <img src="https://gitlocalize-staging.herokuapp.com/repo/1897/whole_project/badge.svg" /> </a>
+
 ## Ingrediens
 
 1. ¼ cup all-purpose flour
